4-external-services/envoy.yaml
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 15000
node:
  cluster: test-node
tracing:
  http:
    name: envoy.tracers.zipkin
    typed_config:
      '@type': type.googleapis.com/envoy.config.trace.v3.ZipkinConfig
      collector_cluster: "zipkin"
      collector_endpoint: "/api/v2/spans"
      trace_id_128bit: true
      shared_span_context: false
      collector_endpoint_version: "HTTP_JSON"
static_resources:
  listeners:
    name: test-listener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager 
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: echo-service  
          route_config:
            name: echo-service
            virtual_hosts:
            - name: echo-service
              domains:
              - '*'
              routes:
              - match: { prefix: "/"}
                route:
                  cluster: echo-service
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          tracing:
            client_sampling:
              value: 100
            random_sampling:
              value: 100
            overall_sampling:
              value: 100
  clusters:
  - name: echo-service
    type: STRICT_DNS
    connect_timeout: 5s
    lb_policy: round_robin
    load_assignment:
      cluster_name: echo-service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: instance1
                port_value: 5678
        - endpoint:
            address:
              socket_address:
                address: instance2
                port_value: 5678
        - endpoint:
            address:
              socket_address:
                address: instance3
                port_value: 5678
        - endpoint:
            address:
              socket_address:
                address: instance4
                port_value: 5678
  - name: zipkin
    type: STRICT_DNS
    connect_timeout: 5s
    load_assignment:
      cluster_name: zipkin
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: jaeger
                port_value: 9411
